# integracao_imox

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run_webhook.py  todo.txt
src/integracao/: cli.py  config.py  dispatch.py  logging_conf.py  polotrial_client.py  redcap_client.py  redcap_unique_event_names.py  sync_engine.py  utils.py  visits_catalog.py  webhook.py
src/integracao/config/: __init__.py  arm_config.py  config.py
src/integracao/events/: generic_visit.py  status_atualization.py  v1_screening.py  v2_randomizacao.py
src/integracao/mappings/: gender_maps.py  procedures_maps.py  race_code_maps.py  site_code_maps.py  v3_visit_name_maps.py
