[project]
name = "integracao-imox"
version = "0.1.0"
description = "Script for webhook integration with trigger activation to send data from Redcap to Polotrial."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "pandas>=3.0.1",
    "pycap>=2.7.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "uvicorn>=0.41.0",
]


[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
